fixing phone overflow

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
 #wrapper {
     overflow-x: hidden;
     overflow-y: hidden;
+    position: fixed;
 }
 
 #backgroundSquare {
